2010-XX-XX Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.9.2 (libshogun 6.1, libshogunui 3.2)
	* This release contains several enhancements, cleanups and bugfixes:
	* Features:
		- Implemented multi task kernel normalizer.
		- Implement SNP kernel.
	* Bugfixes:
		- Fix set_w() for linear classifiers.
	* Cleanup and API Changes:
		- None

2009-11-16 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.9.1 (libshogun 6.0, libshogunui 3.1)
	* This release contains several enhancements, cleanups and bugfixes:
	* Features:
		- Integrate LaRank.
		- Memory Mapped Features (for data sets that don't fit into memory).
        - Compressor module with compression and decompression support for
        lzo, gzip, bzip2 and lzma.
		- Compressed String Features with on-the-fly decompression
		(CDecompressString preproc).
		- Parallel computation of get_kernel_matrix().
		- One may now prefix all shogun print/outputs with file name and
		line number (obj.io.enable_file_and_line())
		- Chinese Documentation thanks Elpmis Lee.
	* Bugfixes:
		- Fix One class MKL testing in static interfaces.
		- Configure fixes: Let octave not write history on configure; fail
		when cplex is forcefully enabled but not found; add cplex 12 support.
		- Fix a problem with regression and CombinedKernels employing only
		Custom kernels.
	* Cleanup and API Changes:
		- String Features now (like SimpleFeatures) upon get_feature_vector
		require an additional do_free argument and need to be freed using
		free_feature_vector.

2009-10-23 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.9.0 (libshogun 5.0, libshogunui 3.0)
	* This release contains several cleanups and enhancements:
	* Features:
	    - Implement set_linear_classifier for static interfaces.
		- Implement Polynomial DotFeatures.
		- Implement domain adaptation SVM.
		- Speed up ScatterSVM.
		- Initial implementation for saving and Loading of shogun objects.